After adding email verification and rectifying the UI

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cloud_firestore: ^3.2.1
   google_sign_in: ^5.4.0
   flutter_facebook_auth: ^4.4.0+1
+  local_auth: ^2.1.0
 
 dev_dependencies:
   flutter_test:
