--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   google_sign_in: ^5.4.0
   flutter_facebook_auth: ^4.4.0+1
   local_auth: ^2.1.0
+  flutter_polyline_points: ^1.0.0
+  google_maps_flutter: ^2.1.8
+  location: ^4.4.0
 
 dev_dependencies:
   flutter_test:
