--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_polyline_points: ^1.0.0
   google_maps_flutter: ^2.1.8
   location: ^4.4.0
+  geocoding: ^2.0.4
 
 dev_dependencies:
   flutter_test:
