--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   google_maps_flutter: ^2.1.8
   location: ^4.4.0
   geocoding: ^2.0.4
+  flutter_google_places: ^0.3.0
+  qr_code_scanner: ^1.0.0
 
 dev_dependencies:
   flutter_test:
